_SOFTWARE_FACTORY/_archive/veligo/ralph-wiggum/logs/D002_20260112_222604.log
Je vais vérifier la configuration du Rate Limiting. Commençons par explorer les fichiers existants.
[94m[1m| [0m[90m Glob     [0m{"pattern":"**/rate_limiter*.rs"}
[94m[1m| [0m[90m Glob     [0m{"pattern":"**/tonic-server.rs"}
[94m[1m| [0m[90m Glob     [0m{"pattern":"**/middleware/*.rs"}
[96m[1m| [0m[90m Read     [0mveligo-platform/backend/src/middleware/rate_limiter.rs
[96m[1m| [0m[90m Read     [0mveligo-platform/backend/src/middleware/rate_limiter_grpc.rs
[96m[1m| [0m[90m Read     [0mveligo-platform/backend/src/bin/tonic-server.rs
[96m[1m| [0m[90m Read     [0mveligo-platform/backend/src/middleware/mod.rs
Je vois que les fichiers existent. Maintenant je dois vérifier si le rate limiter est effectivement activé dans le serveur. Continuons la lecture de tonic-server.rs:
[96m[1m| [0m[90m Read     [0mveligo-platform/backend/src/bin/tonic-server.rs
Le rate limiter gRPC est bien activé (lignes 1716-1721). Vérifions maintenant la configuration Redis et testons le build:
[91m[1m| [0m[90m Bash     [0mBuild Rust backend to verify rate limiter compiles

warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
package:   /Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend/Cargo.toml
workspace: /Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/Cargo.toml
   Compiling veligo-api v0.1.0 (/Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend)
cargo(23544) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.
error[E0432]: unresolved import `http`
  --> backend/src/middleware/rate_limiter_grpc.rs:12:5
   |
12 | use http;
   |     ^^^^ no external crate `http`
   |
help: consider importing one of these items instead
   |
12 | use crate::infrastructure::http;
   |     +++++++++++++++++++++++
12 | use aws_sdk_s3::config::http;
   |     ++++++++++++++++++++
12 | use axum::http;
   |     ++++++

warning: unused import: `Method`
 --> backend/src/api/test_api.rs:8:12
  |
8 |     http::{Method, StatusCode},
  |            ^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `error`
 --> backend/src/infrastructure/email/queue.rs:9:22
  |
9 | use tracing::{debug, error, info, warn};
  |                      ^^^^^

warning: unused import: `error`
  --> backend/src/infrastructure/email/mod.rs:23:15
   |
23 | use tracing::{error, info, warn};
   |               ^^^^^

warning: unused import: `error`
  --> backend/src/infrastructure/erp/erp_client.rs:12:22
   |
12 | use tracing::{debug, error, info};
   |                      ^^^^^

warning: unused import: `async_trait::async_trait`
 --> backend/src/infrastructure/modules/registry.rs:7:5
  |
7 | use async_trait::async_trait;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `error`
  --> backend/src/infrastructure/multimodal/tcl_client.rs:18:22
   |
18 | use tracing::{debug, error, info, warn};
   |                      ^^^^^

error[E0599]: no function or associated item named `from_str` found for struct `BigDecimal` in the current scope
    --> backend/src/api/test_api.rs:1139:79
     |
1139 | ...                   let lat_bd = sqlx::types::BigDecimal::from_str("48.8566")
     |                                                             ^^^^^^^^ function or associated item not found in `BigDecimal`
     |
note: if you're trying to build a new `BigDecimal` consider using one of the following associated functions:
      BigDecimal::new
      BigDecimal::from_bigint
      BigDecimal::from_biguint
      BigDecimal::parse_bytes
    --> /Users/sylvain/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/bigdecimal-0.4.10/src/lib.rs:224:5
     |
 224 |     pub fn new(digits: BigInt, scale: i64) -> BigDecimal {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
 229 |     pub fn from_bigint(digits: BigInt, scale: i64) -> BigDecimal {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
 237 |     pub fn from_biguint(digits: BigUint, scale: i64) -> BigDecimal {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
 309 |     pub fn parse_bytes(buf: &[u8], radix: u32) -> Option<BigDecimal> {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     = help: items from traits can only be used if the trait is in scope
help: trait `FromStr` which provides `from_str` is implemented but not in scope; perhaps you want to import it
     |
   6 + use std::str::FromStr;
     |
help: there is an associated function `from` with a similar name
     |
1139 -                                         let lat_bd = sqlx::types::BigDecimal::from_str("48.8566")
1139 +                                         let lat_bd = sqlx::types::BigDecimal::from("48.8566")
     |

error[E0599]: no function or associated item named `from_str` found for struct `BigDecimal` in the current scope
    --> backend/src/api/test_api.rs:1141:79
     |
1141 | ...                   let lng_bd = sqlx::types::BigDecimal::from_str("2.3522")
     |                                                             ^^^^^^^^ function or associated item not found in `BigDecimal`
     |
note: if you're trying to build a new `BigDecimal` consider using one of the following associated functions:

Il y a des erreurs de compilation. Corrigeons d'abord l'import `http` dans rate_limiter_grpc.rs:
[96m[1m| [0m[90m Read     [0mveligo-platform/backend/Cargo.toml
[91m[1mError: [0mError: ENOSPC: no space left on device, open '/Users/sylvain/.local/share/opencode/storage/part/msg_bb419e6790012Z7Asqp2KnaVBT/prt_bb41a0b3c001gnUAxi5rpfK3hU.json'
